# paper-afd-comparative-study

./: LICENSE  README.md  conda_environment.yaml  pyproject.toml
code/afd_measures/: measures.py  utils.py
code/experiments/: appendixD_sensitivity_analysis.ipynb  appendixE_efficient_computation.ipynb  appendixE_rwd_AUCs.ipynb  appendixE_rwd_prCurves.ipynb  appendixE_rwd_without_rwdminus.ipynb  appendixF_measure_rwd_e.ipynb  appendixF_rank@mr_rwde.ipynb  appendixF_rwde_AUCs.ipynb  create_rank@mr.ipynb  create_rwd_e_dataset.ipynb  create_syn_e.ipynb  create_syn_s.ipynb  create_syn_u.ipynb  create_winning_numbers.ipynb  generate_syn_s.ipynb  generate_syn_u.ipynb  measure_rank@mr.ipynb  measure_rwd_afds.ipynb  measure_rwd_e_afds.ipynb  measure_winning_numbers.ipynb  precisionRecallAUCtable.ipynb  precisionRecallCurves.ipynb  rwd_overview.ipynb  sec5_sensitivity_analysis.ipynb  sec6_challenging_relations.ipynb  sec6_rank@mr.ipynb  sec6_rwd_benchmark.ipynb  sec6_rwdminus_AUCs.ipynb  synExperimentPlots.ipynb
code/synthetic_data/: generator.py  inferrence.py  utils.py
data/: excluded_candidates.csv  ground_truth.csv  included_candidates.csv
data/rwd/: adult.csv
data/rwd_e/: polluted_bogus_0.01_adult.csv  polluted_bogus_0.02_adult.csv  polluted_bogus_0.05_adult.csv  polluted_bogus_0.1_adult.csv  polluted_copy_0.01_adult.csv  polluted_copy_0.02_adult.csv  polluted_copy_0.05_adult.csv  polluted_copy_0.1_adult.csv  polluted_typo_0.01_adult.csv  polluted_typo_0.02_adult.csv  polluted_typo_0.05_adult.csv  polluted_typo_0.1_adult.csv
data/syn_e/: 0_0.csv  0_1.csv  0_10.csv  0_100.csv  0_101.csv  0_102.csv  0_103.csv  0_104.csv  0_105.csv  0_106.csv  0_107.csv  0_108.csv  0_109.csv  0_11.csv  0_110.csv  0_111.csv  0_112.csv  0_113.csv  0_114.csv  0_115.csv  0_116.csv  0_117.csv  0_118.csv  0_119.csv  0_12.csv  0_120.csv  0_121.csv  0_122.csv  0_123.csv  0_124.csv  0_125.csv  0_126.csv  0_127.csv  0_128.csv  0_129.csv  0_13.csv  0_130.csv  0_131.csv  0_132.csv  0_133.csv  (+14960 more)
data/syn_s/: 0_0.csv  0_1.csv  0_10.csv  0_11.csv  0_12.csv  0_13.csv  0_14.csv  0_15.csv  (+4992 more)
(+5000 files in other folders)
