[tool.poetry]
name = "afd_comparative_study"
version = "1.0.0"
description = "Artifact repository to 'Approximately Measuring Functional Dependencies: a Comparative Study'"
authors = ["Marcel Parciak <marcel.parciak@uhasselt.be>, Sebastiaan Weytjens <sebastiaan.weytjens@uhasselt.be>, Frank Neven <frank.neven@uhasselt.be>, Stijn Vansummeren <stijn.vansummeren@uhasselt.be>"]
license = "MIT"
packages = [
	{ include = "code/afd_measures" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
tqdm = "^4.64.1"
joblib = "^1.2.0"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
jupyterlab = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
