[tool.poetry]
name = "afd-measures"
version = "1.0.0"
description = "A collection of measures for Approximate Functional Dependencies in relational data."
authors = [
	"Marcel Parciak <marcel.parciak@uhasselt.be>",
	"Sebastiaan Weytjens <sebastiaan.weytjens@uhasselt.be>", 
	"Frank Neven <frank.neven@uhasselt.be>",
	"Stijn Vansummeren <stijn.vansummeren@uhasselt.be>"
]
license = "MIT"
packages = [
	{ include = "afd_measures", from = "code" },
]
classifiers = [
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: MIT License",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Information Analysis"
]
repository = "https://github.com/MarcelPa/AFD_comparative_study"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
numpy = "^1.23.5"
tqdm = { version = "^4.64.1", optional = true }
joblib = { version = "^1.2.0", optional = true }
scikit-learn = { version = "^1.1.3", optional = true }
jupyterlab = { version = "^3.5.0", optional = true }
plotly = { version = "^5.13.0", optional = true }

[tool.poetry.extras]
experiments = ["jupyterlab", "plotly", "tqdm", "joblib", "scikit-learn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
